# AzSphereSK_EPD_Demo

./: README.md
AzSphereSK_EPD_Demo/: launch.vs.json
AzSphereSK_EPD_Demo/EPD/: AzSphere_Interface.c  AzSphere_Interface.h  IL3820_2in9_Driver.c  IL3820_2in9_Driver.h  ImageData.c  ImageData.h
AzSphereSK_EPD_Demo/Hardware/avnet_mt3620_sk/inc/hw/: avnet_mt3620_sk.h
AzSphereSK_EPD_Demo/HighLevelCore/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  applibs_versions.h  launch.vs.json  main.c
AzSphereSK_EPD_Demo/RealTimeCore/: CMakeLists.txt  app_manifest.json  launch.vs.json
AzSphereSK_EPD_Demo/Tools/GFX/: Gfx.c  Gfx.h
AzSphereSK_EPD_Demo/Tools/QRcode/: qrcode.c  qrcode.h
Refrences/Example Codes/2in9EpaperDisplayMKL25z_E14C_MCUonECL/: ep29.cpp  ep29.h  main.cpp
